tests/resource/valid/collection/set.mamba
def a := {}
def b := { 10, 20 }
def c := { {}, {} }
def d := { { "a" }, { "c", "d" } }
