tests/resource/invalid/type/collection/dictionary_not_sliceable.mamba
def a := { 20 => "asdf", 30 => "asdf" }

a[20:30]
